# crosspod

./: .gitignore  CMakeLists.txt
app/: CMakeLists.txt  crosspod_en_US.ts  main.cpp  main.qml  qml.qrc
app/actions/: AppActions.qml
app/cmake/: FindQuickFlux.cmake
app/qml/: main.qml  qml.qrc
app/qml/actions/: ActionTypes.qml  AppActions.qml
app/qml/middlewares/: ApiFixtures.qml  PodcastMiddleware.qml  SystemMiddleware.qml  qmldir
app/qml/stores/: PodcastStore.qml  RootStore.qml
app/qml/ui/pages/: LibraryPage.qml  PlayListPage.qml  SearchPage.qml  qmldir
app/stores/: RootStore.qml
app/ui/pages/: DiscoverPage.qml  SearchPage.qml  qmldir
app/ui/theme/: Theme.qml
crosspod-rs/: Cargo.toml  build.rs
crosspod-rs/src/: search.rs  types.rs
