[package]
name = "crosspod-rs"
version = "0.1.0"
authors = ["Ernesto Cruz Olivera <ernesto@ecruzolivera.tech>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type=["staticlib"]

[build-dependencies]
cxx-build = "1.0.28"

[dependencies]
cxx = "1.0"

